<resources>
    <string name="app_name">Text Editor</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="editable">This text field will change according to the settings you have set from the \"Settings\" tab.</string>
    <string name="user_editable">Apply text editing from the \"Settings\" tab. To edit this text.</string>
    <string name="language">Language</string>
    <string name="settings">Settings:</string>
    <string name="font_size">Font size:</string>
    <string name="font_color">Font color:</string>
    <string name="line_amount">Line amount:</string>
    <string name="change_text_to_all_caps">Change text to all caps</string>
    <string name="enable_text_editing">Enable text editing:</string>
    <string name="override_text">Override text:</string>
    <string name="menu_title">Menu</string>
    <string name="home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="text_editor_pro">Text Editor PRO</string>
</resources>
